--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section id="main_content" class="inner">
         <h1>Kickass Consulting</h1>
          <h2>Obie Fernandez &amp; Associates</h2>
-        
+
 
         <p>As your consultant, we promise to always tell you the truth – not just what you want to hear. Our fearless leader, <a href="http://obiefernandez.com">Obie Fernandez</a>, is a technologist at heart. He has a deep, abiding love and respect for open source web technologies, especially in the Ruby and JavaScript realms. Since 2005, he has been one of the leading evangelists for Ruby on Rails on the web and in conferences around the world. Obie still codes on a regular basis and devotes time to maintaining personal technical projects every week.</p>
 
@@ -25,13 +25,14 @@
 
         <h3>Services</h3>
 
-        <p>As an experienced independent consultant, startup entrepreneur and former agency executive, Obie leverages his extensive network and personal expertise to advise his Kickass clients. In addition to Obie's consultant services, we can bring in a diverse range of sub-contractors, from designers, to QA analysts, to DevOps specialists, to help with your project if the need arises.</p>
+        <p>As an experienced independent consultant, startup entrepreneur and former agency executive, Obie leverages his extensive network and personal expertise to advise his Kickass clients. In addition to Obie's consultant services, we can bring in a diverse range of senior developers and specialists experts, from designers, to QA analysts, to DevOps specialists, to help make your project a success.</p>
 
-        <p>Obie's consulting services may be broadly categorized as:
+        <p>Our consulting services may be broadly categorized as:
         <ul>
         <li>CTO-level strategic technical consulting and thought leadership</li>
         <li>Process and technical team management consulting</li>
         <li>Architectural and code review of Rails-based projects</li>
+        <li>Work-for-hire project delivery</li>
         <li>Technical recruiting advice</li>
         <li>Social media marketing to technical audiences</li>
         </ul>
