added jobs page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>Kickass Consulting</h1>
-         <h2>Obie Fernandez &amp; Associates</h2>
+         <h2>(also known as Obie Fernandez &amp; Associates)</h2>
 
 
-        <p>As your consultant, we promise to always tell you the truth – not just what you want to hear. Our fearless leader, <a href="http://obiefernandez.com">Obie Fernandez</a>, is a technologist at heart. He has a deep, abiding love and respect for open source web technologies, especially in the Ruby and JavaScript realms. Since 2005, he has been one of the leading evangelists for Ruby on Rails on the web and in conferences around the world. Obie still codes on a regular basis and devotes time to maintaining personal technical projects every week.</p>
+        <p>Our fearless leader, <a href="http://obiefernandez.com">Obie Fernandez</a> has a deep, abiding love and respect for open source web technologies, especially in the Ruby and JavaScript realms. Since 2005, he has been one of the leading evangelists for Ruby on Rails on the web and in conferences around the world. Obie still codes on a regular basis and devotes time to maintaining personal technical projects every week.</p>
 
-        <p>Over the years, we have helped our clients meet their business objectives by advising them on how to align technical initiatives with their most important business goals. We consider our primary responsibility to your business to be helping you to exercise good judgment when investing your critical development dollars.
+        <p>Over the years, we have helped clients to align technical initiatives with their most important business goals. We consider our primary responsibility to be helping you exercise good judgment when investing your critical development dollars.
         </p>
 
         <h3>Services</h3>
-
         <p>As an experienced independent consultant, startup entrepreneur and former agency executive, Obie leverages his extensive network and personal expertise to advise his Kickass clients. In addition to Obie's consultant services, we can bring in a diverse range of senior developers and specialists experts, from designers, to QA analysts, to DevOps specialists, to help make your project a success.</p>
 
         <p>Our consulting services may be broadly categorized as:
@@ -37,10 +36,12 @@
         <li>Social media marketing to technical audiences</li>
         </ul>
         </p>
-
-        <h3>Reach Out</h3>
-
-        <p>Contact us via <a href="mailto:obie@kickass-consulting.com">email</a>.</p>
+        <h3>Want to talk about retaining us for your project?</h3>
+        <p>
+          We are able to offer attractive hourly rates due to being headquartered in Mexico City. To explore options, just contact us via <a href="mailto:obie@kickass-consulting.com">email</a> or phone call at <a href="tel:+14049199201">+1 (404) 919-9201</a>.
+        </p>
+        <h3>Are you a Kickass Developer?</h3>
+        <p>Our team is <a href="/jobs.html">growing</a>.</p>
       </section>
     </div>
     <script>
