--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Kickass Consulting</title>
+    <script>window.location = "http://kickass.partners"</script>
   </head>
 
   <body>
